[package]
name = "tpath"
version = "0.1.0"
authors = ["amirpouya.a@gmail.com <karzyggojwurbapPi9>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
rayon = "*"
hashbrown = { version = "0.12.0", features = ["rayon"] }